--- a/epub_source/OEBPS/Text/contents.xhtml
+++ b/epub_source/OEBPS/Text/contents.xhtml
@@ -12,7 +12,7 @@
 <body id="calibre_generated_inline_toc" class="mp_body">
 <h2>目錄</h2>
 <div class="toc_border">
-	<h3 class="toc_title"><a class="toc_link" href="../Text/index_split_000.html#calibre_toc_1">梅花拳秘譜︵ 含燕子傑評注︶</a></h3>
+	<h3 class="toc_title"><a class="toc_link" href="../Text/index_split_000.html#calibre_toc_1">序</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_001.html#calibre_toc_2">練拳須知</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_002.html#calibre_toc_3">梅拳概論</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_003.html#calibre_toc_4">渾元論</a></h3>
