--- a/epub_source/OEBPS/Text/index_split_000.html
+++ b/epub_source/OEBPS/Text/index_split_000.html
@@ -10,7 +10,7 @@
  
 </head>
   <body class="mp_body">
-        <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_1">梅花拳秘譜︵ 含燕子傑評注︶</h1>
+        <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_1">序</h1>
 <p class="mp_main">廣泛流傳在我國河北、山東、河南廣大農村的梅花拳
             <span class="mp_comment_inline">︻古稱梅花樁，由於在100 根樁陣上鍛煉而得名︼</span>
             是一個源遠流長、古樸而神秘的拳派，它是在明末農民起義的戰亂中公開傳授並興盛起來的。早在1988 年之前，我國曆史學家就從文獻和曆史傳說中發現梅花拳在清末義和團反帝鬥爭中是發動者和主力。這種觀點立即引起了國內外史學界的注意，但真正能深入了解梅花拳奧秘，卻是1988 年年底以後。著名曆史學家路遙教授與梅花拳弟子燕子傑教授等人合作，對河北、山東、河南義和團反帝鬥爭激烈或農民起義活躍的地區多次深入調查之後，大量事實證明義和拳就是梅花拳。這個拳派的弟子和許多著名拳師都是曆代封建王朝的造反者或農民起義軍的領袖。這個拳派能在曆史上發揮如此重大的作用並不是偶然的。梅花拳有文場、武場之分，文場敬祖師，研究拳理，他們集佛、道、儒三家學說、周易之理為一體，有豐富的文化典籍世代相傳，修身養性，煉神煉氣，稱為文功。文場老師領導拳派的整個活動，負責教育門內弟子；武場主要進行武功鍛煉，其武術內容豐富多彩，有獨特的練法和風格，一切都與當前流行的武術套路完全不同。它不僅有明顯的強身健體作用，還有極強的技擊實戰能力。他們練武的目的是練形練氣，由外及內，再由內而外，達內外一體，精氣神合一，最後上升到文功。我們調查中就親眼所見，各地許多梅花拳師不僅武藝高強且精通文理，善用陰陽八卦，能行醫治病，他們雖都是七八十歲以上的老人，但體健神旺、思路敏捷，能審時度勢，且有一定的人體特異功能。</p>
