--- a/epub_source/OEBPS/Text/index_split_006.html
+++ b/epub_source/OEBPS/Text/index_split_006.html
@@ -19,7 +19,7 @@
 
 
 	<h2 id="calibre_toc_9" class="mp_subtitle">入陽扶陰，入陰扶陽說</h2>
-<p class="mp_main">以俯勢入陽氣，不將陰氣扶起，則偏於陽，必有領拉前栽之患。仰勢入陰氣，不將陽氣扶起，則偏於陰，必有掀推後倒之憂，故俯勢出者，落點疾還之以俯熟使無偏於陰也。陰來陽逆，陽來陰逆，不偏不倚，無過不及，落點還原，所雲停成即是此法。推而至於屈者還之以伸，伸者還之以屈，高者還之以低，低者還之以高，側者還之以正，正者還之以側，以及斜歪紐縹，旋轉往來無不皆然。逐勢練去，則陰陽交結自有得心應手之妙，永無失著矣。</p>
+<p class="mp_main">以俯勢入陽氣，不將陰氣扶起，則偏於陽，必有領拉前栽之患。仰勢入陰氣，不將陽氣扶起，則偏於陰，必有掀推後倒之憂，故俯勢出者，落點疾還之以俯，熟使無偏於陰也。陰來陽逆，陽來陰逆，不偏不倚，無過不及，落點還原，所雲停成即是此法。推而至於屈者還之以伸，伸者還之以屈，高者還之以低，低者還之以高，側者還之以正，正者還之以側，以及斜歪紐縹，旋轉往來無不皆然。逐勢練去，則陰陽交結自有得心應手之妙，永無失著矣。</p>
 
 
 	<h2 id="calibre_toc_10" class="mp_subtitle">陰陽並入，陰陽並扶說</h2>
